force-app/main/default/objects/TV_Show__c/fields/Img__c.field-meta.xml
<CustomField>
    <fullName>Img__c</fullName>
    <label>Img</label>
    <type>Url</type>
</CustomField>