force-app/main/default/objects/TV_Show__c/fields/Trailer_Link__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Link__c</fullName>
    <label>Trailer Link</label>
    <type>Url</type>
</CustomField>