force-app/main/default/objects/TV_Show__c/validationRules/Description_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_length</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Description__c ) &lt; 10</errorConditionFormula>
    <errorMessage>Description must be longer than 10 charachters.</errorMessage>
</ValidationRule>