force-app/main/default/objects/TV_Show__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Img__c</columns>
    <columns>Description__c</columns>
    <columns>Trailer_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>